force-app/main/default/objects/Intake__c/fields/HUD_Supported_Housing__c.field-meta.xml
<CustomField>
    <fullName>HUD_Supported_Housing__c</fullName>
    <inlineHelpText>Includes Voucher, Section 8, Other</inlineHelpText>
    <label>HUD Supported Housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>