force-app/main/default/objects/Intake__c/fields/Initial_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Call_Date__c</fullName>
    <label>Initial Call Date</label>
    <type>Date</type>
</CustomField>