force-app/main/default/objects/Intake__c/fields/Initial_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funding_Date__c</fullName>
    <inlineHelpText>To be entered by Enrollment Manager</inlineHelpText>
    <label>Initial Funding Date</label>
    <type>Date</type>
</CustomField>