force-app/main/default/objects/Intake__c/fields/Intake_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Intake_Name_Text__c</fullName>
    <defaultValue>&quot;Please enter an X in the Intake Name field&quot;</defaultValue>
    <label>Intake Name Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>