force-app/main/default/objects/Intake__c/fields/Intake_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Intake_Processed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Processed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trust_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>