force-app/main/default/objects/Intake__c/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <label>Intake Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Ready to Process</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>