force-app/main/default/objects/Intake__c/fields/JA_Return_Reason_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>JA_Return_Reason_for_Templates__c</fullName>
    <inlineHelpText>This field is populated via a flow with either the JA Return Reason or the Other JA Return Reason, if that field is populated</inlineHelpText>
    <label>JA Return Reason for Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>