force-app/main/default/objects/Intake__c/fields/Joinder_Approved_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Joinder_Approved_Email_Sent_Date__c</fullName>
    <label>Joinder Approved Email Sent Date</label>
    <type>Date</type>
</CustomField>