force-app/main/default/objects/Intake__c/fields/Joinder_Notes__c.field-meta.xml
<CustomField>
    <fullName>Joinder_Notes__c</fullName>
    <inlineHelpText>For Enrollment Manager only</inlineHelpText>
    <label>Joinder Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>