force-app/main/default/objects/Intake__c/fields/Joinder_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Joinder_Received_Date__c</fullName>
    <label>Joinder Received Date</label>
    <type>Date</type>
</CustomField>