force-app/main/default/objects/Intake__c/fields/Joinder_Received_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Joinder_Received_Email_Sent_Date__c</fullName>
    <label>Joinder Received Email Sent Date</label>
    <type>Date</type>
</CustomField>