force-app/main/default/objects/Intake__c/fields/Joinder_Status__c.field-meta.xml
<CustomField>
    <fullName>Joinder_Status__c</fullName>
    <label>Joinder Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Unestablished</fullName>
            </value>
            <value>
                <fullName>Update Joinder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>