force-app/main/default/objects/Intake__c/fields/Mail_or_Call__c.field-meta.xml
<CustomField>
    <fullName>Mail_or_Call__c</fullName>
    <label>Call/Mail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>