force-app/main/default/objects/Intake__c/fields/Monthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Salary__c</fullName>
    <label>Monthly Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>