force-app/main/default/objects/Intake__c/fields/Name_of_Caller__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Caller__c</fullName>
    <label>Name of Caller/Emailer</label>
    <length>130</length>
    <type>Text</type>
</CustomField>