force-app/main/default/objects/Intake__c/fields/Original_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Profile_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Original Profile ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>