force-app/main/default/objects/Intake__c/fields/Other_Housing_Support__c.field-meta.xml
<CustomField>
    <fullName>Other_Housing_Support__c</fullName>
    <label>Other Housing Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>