force-app/main/default/objects/Intake__c/fields/Other_Living_Situation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Living_Situation_Notes__c</fullName>
    <label>Other Living Situation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>