force-app/main/default/objects/Intake__c/fields/Other_Mobility_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Mobility_Information__c</fullName>
    <label>Other Mobility Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>