force-app/main/default/objects/Intake__c/fields/Other_Reason_JA_Returned__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_JA_Returned__c</fullName>
    <description>The reason(s) why this Joinder Agreement is being returned if Other was selected in Reason JA Returned multi picklist.</description>
    <label>Other Reason JA Returned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>