force-app/main/default/objects/Intake__c/fields/Other_Residence_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Residence_Type_Notes__c</fullName>
    <label>Other Residence Type Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>