force-app/main/default/objects/Intake__c/fields/Other_States_Lived_In__c.field-meta.xml
<CustomField>
    <fullName>Other_States_Lived_In__c</fullName>
    <label>Other States Lived In</label>
    <length>150</length>
    <type>Text</type>
</CustomField>