force-app/main/default/objects/Intake__c/fields/Percent_Leaving_to_Arcare__c.field-meta.xml
<CustomField>
    <fullName>Percent_Leaving_to_Arcare__c</fullName>
    <label>Percent Leaving to Arcare</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>