force-app/main/default/objects/Intake__c/fields/Power_of_Attorney_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power of Attorney Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Power of Attorney Account Lookup)</relationshipLabel>
    <relationshipName>IntakekfLm</relationshipName>
    <type>Lookup</type>
</CustomField>