force-app/main/default/objects/Intake__c/fields/Power_of_Attorney_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power of Attorney Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Power of Attorney)</relationshipLabel>
    <relationshipName>Trust_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>