force-app/main/default/objects/Intake__c/fields/Primary_Rep_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Rep Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Primary Rep Account Lookup)</relationshipLabel>
    <relationshipName>Intake8</relationshipName>
    <type>Lookup</type>
</CustomField>