force-app/main/default/objects/Intake__c/fields/Primary_Rep_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Rep Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Primary Rep Contact Lookup)</relationshipLabel>
    <relationshipName>Intake5</relationshipName>
    <type>Lookup</type>
</CustomField>