force-app/main/default/objects/Intake__c/fields/Prognosis__c.field-meta.xml
<CustomField>
    <fullName>Prognosis__c</fullName>
    <label>Prognosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prognosis</valueSetName>
    </valueSet>
</CustomField>