force-app/main/default/objects/Intake__c/fields/Reason_JA_Returned__c.field-meta.xml
<CustomField>
    <fullName>Reason_JA_Returned__c</fullName>
    <label>Reason JA Returned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplemental Information Form is missing</fullName>
            </value>
            <value>
                <fullName>Grantor(s) signatures missing (PAGE 10 of JOINDER AGREEMENT)</fullName>
            </value>
            <value>
                <fullName>&quot;Acknowledgement of Grantor’s Signature” (PAGE 10 of JOINDER AGREEMENT) is not signed and/or notarized with Notary&apos;s stamp/seal applied.</fullName>
            </value>
            <value>
                <fullName>Court Orders are missing</fullName>
            </value>
            <value>
                <fullName>Original Joinder Agreement not sent</fullName>
            </value>
            <value>
                <fullName>Wrong Beneficiary</fullName>
            </value>
            <value>
                <fullName>Wrong Grantor</fullName>
            </value>
            <value>
                <fullName>Missing Required Information:</fullName>
            </value>
            <value>
                <fullName>Benefits questions not answered</fullName>
            </value>
            <value>
                <fullName>Social Security Number missing</fullName>
            </value>
            <value>
                <fullName>Date of birth missing</fullName>
            </value>
            <value>
                <fullName>The Master Pooled Trust has been unsuccessful in our attempts to reach you.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>