force-app/main/default/objects/Intake__c/fields/Relationship_of_Household_Members__c.field-meta.xml
<CustomField>
    <fullName>Relationship_of_Household_Members__c</fullName>
    <label>Relationship of Household Members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>