force-app/main/default/objects/Intake__c/fields/Rep_Payee_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Payee Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake (Rep Payee Account)</relationshipLabel>
    <relationshipName>Intake2</relationshipName>
    <type>Lookup</type>
</CustomField>