force-app/main/default/objects/Intake__c/fields/Rep_Payee_Contact__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Payee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake (Representative Payee)</relationshipLabel>
    <relationshipName>Trust_Applications5</relationshipName>
    <type>Lookup</type>
</CustomField>