force-app/main/default/objects/Intake__c/fields/Texas_Resident__c.field-meta.xml
<CustomField>
    <fullName>Texas_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texas Resident</label>
    <type>Checkbox</type>
</CustomField>