force-app/main/default/objects/Intake__c/fields/Timeline_to_Set_Up_Trust__c.field-meta.xml
<CustomField>
    <fullName>Timeline_to_Set_Up_Trust__c</fullName>
    <label>Timeline to Set Up Trust</label>
    <length>255</length>
    <type>Text</type>
</CustomField>