force-app/main/default/objects/Intake__c/fields/True_Link_Set_up_Fee_600__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Set_up_Fee_600__c</fullName>
    <defaultValue>false</defaultValue>
    <label>True Link Set-up Fee ($600)</label>
    <type>Checkbox</type>
</CustomField>