force-app/main/default/objects/Intake__c/fields/Trust_Charge_Initial_Set_Up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trust_Charge_Initial_Set_Up_Fee__c</fullName>
    <formula>Trust__r.Charge_Initial_Set_up_Fee_300__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Charge Initial Set Up Fee</label>
    <type>Checkbox</type>
</CustomField>