force-app/main/default/objects/Intake__c/fields/Use_Trust_to_Buy_Prepaid_Funeral_Plan__c.field-meta.xml
<CustomField>
    <fullName>Use_Trust_to_Buy_Prepaid_Funeral_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Trust to Buy Prepaid Funeral Plan</label>
    <type>Checkbox</type>
</CustomField>