force-app/main/default/objects/Intake__c/fields/USPS_Address_Lookup__c.field-meta.xml
<CustomField>
    <fullName>USPS_Address_Lookup__c</fullName>
    <defaultValue>&quot;https://tools.usps.com/zip-code-lookup.htm?byaddress&quot;</defaultValue>
    <label>USPS Address Lookup</label>
    <type>Url</type>
</CustomField>