force-app/main/default/objects/Intake__c/fields/When_Did_Disability_Diagnosis_Occur__c.field-meta.xml
<CustomField>
    <fullName>When_Did_Disability_Diagnosis_Occur__c</fullName>
    <label>When Did Disability/Diagnosis Occur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>