force-app/main/default/objects/Intake__c/fields/Will_Trust_Be_Funded_In_the_Future__c.field-meta.xml
<CustomField>
    <fullName>Will_Trust_Be_Funded_In_the_Future__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Trust Be Funded In the Future</label>
    <type>Checkbox</type>
</CustomField>