force-app/main/default/objects/Intake__c/fields/X18_Digit_Beneficiary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Beneficiary_Contact_ID__c</fullName>
    <formula>CASESAFEID(Beneficiary__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Beneficiary Contact ID</label>
    <type>Text</type>
</CustomField>