force-app/main/default/objects/Intake__c/recordTypes/MPT.recordType-meta.xml
<RecordType>
    <fullName>MPT</fullName>
    <active>true</active>
    <label>MPT</label>
</RecordType>