force-app/main/default/objects/Intake__c/validationRules/Cannot_Check_Create_Bene_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Check_Create_Bene_Only</fullName>
    <active>true</active>
    <description>Cannot Check Create Bene Only if already have Bene</description>
    <errorConditionFormula>AND(ISCHANGED(Create_Beneficiary_Only__c),  
Create_Beneficiary_Only__c = TRUE,
!ISBLANK(Beneficiary__c))</errorConditionFormula>
    <errorMessage>Beneficiary Person Account has already been created.</errorMessage>
</ValidationRule>