force-app/main/default/objects/Intake__c/validationRules/Unfunded_I_or_III_Need_Grantor.validationRule-meta.xml
<ValidationRule>
    <fullName>Unfunded_I_or_III_Need_Grantor</fullName>
    <active>true</active>
    <description>Unfunded I or III Need Grantor</description>
    <errorConditionFormula>AND(ISCHANGED(Joinder_Status__c), TEXT(Joinder_Status__c) = &quot;Joinder Approved&quot;,ISBLANK(Funding_Amount__c), OR(TEXT(Trust_Type__c) = &quot;I&quot;, TEXT(Trust_Type__c) = &quot;III&quot;),
ISBLANK(Grantor_Contact_Lookup__c))</errorConditionFormula>
    <errorMessage>Please enter a Grantor before moving the Joinder Status to Joinder Approved on an unfunded I or III trust</errorMessage>
</ValidationRule>