force-app/main/default/objects/Intake__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Intake_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Beneficiary__c</columns>
    <columns>Joinder_Status__c</columns>
    <columns>Joinder_Received_Email_Sent_Date__c</columns>
    <columns>Joinder_Received_Date__c</columns>
    <columns>Enrollment_Fee_Amount__c</columns>
    <columns>Enrollment_Fee_Check_Number__c</columns>
    <columns>Enrollment_Fee_Paid__c</columns>
    <columns>Enrollment_Fee_Paid_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>