force-app/main/default/objects/Intake__c/listViews/Court_Ordered_Intakes_Not_Processed.listView-meta.xml
<ListView>
    <fullName>Court_Ordered_Intakes_Not_Processed</fullName>
    <columns>NAME</columns>
    <columns>Intake_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Court_Ordered__c</columns>
    <columns>Trust_Accounting_Start_Date__c</columns>
    <columns>Section_Type__c</columns>
    <columns>Managing_Court__c</columns>
    <columns>Court_County__c</columns>
    <columns>Initial_Funding_Source__c</columns>
    <columns>Intake_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Court_Ordered__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Intake_Status__c</field>
        <operation>notEqual</operation>
        <value>Processed,Inactive</value>
    </filters>
    <label>Court Ordered Intakes - Not Processed</label>
</ListView>