force-app/main/default/objects/Intake__c/listViews/Intakes_w_o_Beneficiary.listView-meta.xml
<ListView>
    <fullName>Intakes_w_o_Beneficiary</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Intake_Status__c</columns>
    <columns>Bene_First_Name__c</columns>
    <columns>Bene_Middle_Name__c</columns>
    <columns>Bene_Last_Name__c</columns>
    <columns>Bene_Birthdate__c</columns>
    <columns>Bene_Living_City__c</columns>
    <columns>Bene_Living_Zip__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bene_Last_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>Intakes w/o Beneficiary</label>
</ListView>