force-app/main/default/objects/Intake__c/listViews/No_Bene_Last_Name.listView-meta.xml
<ListView>
    <fullName>No_Bene_Last_Name</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Intake_Status__c</columns>
    <columns>Bene_First_Name__c</columns>
    <columns>Bene_Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bene_Last_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Bene Last Name</label>
</ListView>