force-app/main/default/objects/Intake__c/listViews/Returned_Joinders.listView-meta.xml
<ListView>
    <fullName>Returned_Joinders</fullName>
    <columns>Date_Returned__c</columns>
    <columns>Bene_First_Name__c</columns>
    <columns>Bene_Last_Name__c</columns>
    <columns>Enrollment_Fee_Amount__c</columns>
    <columns>Funding_Amount__c</columns>
    <columns>Other_Reason_JA_Returned__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date_Returned__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2015</value>
    </filters>
    <label>Returned Joinders</label>
</ListView>